Stop SpellCheckRequest from checking canCheckAsynchronously()

This patch removes static function canCheckAsynchronously() from
SpellCheckRequester.cpp and stops SpellCheckRequest from calling it.

The removed function is legacy code from the old age before the removal
of synchronous spell checking. In addition, the items checked by this
function do not make much sense now -- either incorrect or redundant.
Hence, the function is removed.

This patch is also a preparation for reducing the use of
TextCheckingParagraph: http://crrev.com/2273453003

BUG=640456
TEST=editing/spelling/paste_into_element_starting_with_invisible.html

Review-Url: https://codereview.chromium.org/2248413003
Cr-Commit-Position: refs/heads/master@{#414049}

Former-commit-id: 7168dd4011adfe053b7a5c0f308fcf7b1495b31b